<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.melody.AudioRecordingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:src="@mipmap/microphone"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"
            android:layout_marginEnd="-20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="72dp"
            android:layout_toStartOf="@+id/imageView"
            android:text="@string/start_recording" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/start_button"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/start_button"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="-20dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/stop_recording" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/start_button"
            android:layout_marginEnd="-20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_toStartOf="@+id/imageView"
            android:text="@string/play" />

        <Button
            android:id="@+id/stop_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/play_button"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/play_button"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="-20dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/stop" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:layout_below="@+id/play_button"
            android:layout_marginTop="30dp"
            android:text="@string/submit" />
        <!--android:onClick="submitAudio"/>-->

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
