<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.melody.CreateMemoryActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/memory_description"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hitforMemoryDescription"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="140dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/add_privacy"
        android:layout_width="123dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="43dp"
        android:text="@string/select_privacy"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <ImageButton
        android:id="@+id/take_photos"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:onClick="pickPhotoDialog"
        android:tint="@color/blueDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/memory_description"
        app:layout_constraintTop_toBottomOf="@+id/add_privacy"
        app:layout_constraintVertical_bias="0.628"
        app:srcCompat="@mipmap/photo"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/take_videos"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@null"
        android:onClick="pickVideoDialog"
        android:tint="@color/blueDark"
        app:layout_constraintBottom_toBottomOf="@+id/take_photos"
        app:layout_constraintLeft_toRightOf="@+id/take_photos"
        app:layout_constraintRight_toLeftOf="@+id/memory_send"
        app:layout_constraintTop_toTopOf="@+id/take_photos"
        app:srcCompat="@mipmap/video"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/memory_send"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@null"
        android:onClick="sendMemory"
        android:tint="@color/blueDark"
        app:layout_constraintBottom_toBottomOf="@+id/take_photos"
        app:layout_constraintLeft_toRightOf="@+id/take_videos"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/take_photos"
        app:srcCompat="@mipmap/send_memory"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/private_memory_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/select_privacy"
        android:onClick="makeMemoryPrivate"
        android:tint="@color/blueDark"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/add_privacy"
        app:layout_constraintRight_toLeftOf="@+id/shared_memory_button"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:srcCompat="@mipmap/private_memory" />

    <ImageButton
        android:id="@+id/public_memory_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/select_privacy"
        android:onClick="makeMemoryPublic"
        android:tint="@color/blueDark"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/shared_memory_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:srcCompat="@mipmap/public_memory" />

    <ImageButton
        android:id="@+id/shared_memory_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/select_privacy"
        android:onClick="makeMemoryShared"
        android:tint="@color/blueDark"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/private_memory_button"
        app:layout_constraintRight_toLeftOf="@+id/public_memory_button"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:srcCompat="@mipmap/shared_memory" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_marginTop="14dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="@+id/memory_description"
        app:layout_constraintRight_toRightOf="@+id/memory_description"
        app:layout_constraintTop_toBottomOf="@+id/memory_description">

        <VideoView
            android:id="@+id/display_chosen_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:background="@null"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/display_chosen_photo"
            app:layout_constraintLeft_toLeftOf="@+id/display_chosen_photo"
            app:layout_constraintRight_toRightOf="@+id/display_chosen_photo"
            app:layout_constraintTop_toTopOf="@+id/display_chosen_photo"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/display_chosen_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@null"
            tools:ignore="ContentDescription,MissingConstraints" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
