...
    <string name="forgot_password_msg">We just need your registered Email to send you password reset instructions.</string>

    <!--Don't fix the follow lint!-->
    <string name="web_client_id">90372047742-46j4klcbiheuec6q73gbicrvubn2oetd.apps.googleusercontent.com</string>

    <string name="create_display_name">Nick Name</string>
    <string name="email_is_empty">Enter email address!</string>
    <string name="password_is_empty">Enter password!</string>
    <string name="nickname_is_empty">Enter your nickname!</string>
    <string name="reset_password_empty">Enter your registered email!</string>
    <string name="send_reset_password_email">We have sent you instructions to reset your password!</string>
    <string name="fail_send_rest_password_email">Failed to send reset email!</string>
    <string name="edit"><u>Edit</u></string>
    <string name="edit_user_name">Edit user name</string>
...
